--- a/src/components/CharacterCard/style.css
+++ b/src/components/CharacterCard/style.css
@@ -1,5 +1,5 @@
 .card {
-    width: 10rem;
+    width: 10.5em;
     display: inline-block;
     margin: 1em;
     background: #eee;
@@ -7,4 +7,10 @@
 
 .card:hover {
     cursor: pointer;
+}
+
+@media only screen and (min-width: 893px) {
+    .card {
+        margin: 1em 0.5em;
+    }
 }
